[gd_scene load_steps=14 format=3 uid="uid://2nn3p7a5xko5"]

[ext_resource type="Script" path="res://MeshGrid.gd" id="1_dm1b3"]
[ext_resource type="Script" path="res://game.gd" id="1_l7nue"]
[ext_resource type="Script" path="res://Points.gd" id="3_kufn3"]
[ext_resource type="Script" path="res://MeshBody.gd" id="4_ikp5r"]
[ext_resource type="Script" path="res://MouseCollider.gd" id="5_oc32h"]
[ext_resource type="Script" path="res://Circle.gd" id="6_m82l2"]
[ext_resource type="Script" path="res://Player.gd" id="8_2nbqq"]
[ext_resource type="Script" path="res://Camera.gd" id="8_uosem"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w7gar"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_b7r4o"]
noise_type = 2
seed = 14
frequency = 0.003
cellular_jitter = 0.7

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3jbuj"]
width = 2000
height = 2000
invert = true
noise = SubResource("FastNoiseLite_b7r4o")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_wqrdq"]
noise_type = 3
seed = 7
frequency = 0.006
cellular_jitter = 0.7

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_imbci"]
width = 2000
height = 2000
noise = SubResource("FastNoiseLite_wqrdq")

[node name="Game" type="Node2D"]
script = ExtResource("1_l7nue")

[node name="Points" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 1
script = ExtResource("3_kufn3")

[node name="MeshBody" type="StaticBody2D" parent="."]
input_pickable = true
script = ExtResource("4_ikp5r")

[node name="MeshInstance" type="MeshInstance2D" parent="MeshBody"]
unique_name_in_owner = true
modulate = Color(0.054902, 0.768627, 0, 1)
script = ExtResource("1_dm1b3")

[node name="MouseCollider" type="Area2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.396078)
collision_layer = 8
collision_mask = 8
input_pickable = false
script = ExtResource("5_oc32h")

[node name="MouseCircle" type="CollisionShape2D" parent="MouseCollider"]
shape = SubResource("CircleShape2D_w7gar")

[node name="Sprite2D" type="Sprite2D" parent="MouseCollider"]
script = ExtResource("6_m82l2")

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
anchor_mode = 0
script = ExtResource("8_uosem")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(400, 100)
script = ExtResource("8_2nbqq")

[node name="Collider" type="CollisionShape2D" parent="Player"]

[node name="Noises" type="Node2D" parent="."]

[node name="NoiseCoarse" type="Sprite2D" parent="Noises"]
unique_name_in_owner = true
visible = false
texture = SubResource("NoiseTexture2D_3jbuj")

[node name="NoiseFine" type="Sprite2D" parent="Noises"]
unique_name_in_owner = true
visible = false
texture = SubResource("NoiseTexture2D_imbci")

[connection signal="regenerate" from="MouseCollider" to="." method="_on_points_regenerate"]
[connection signal="camera_update" from="Camera" to="MouseCollider" method="_on_camera_update"]
